--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.narmware.vvmexam">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -16,7 +17,9 @@
 
         </activity>
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.DemoActivity"></activity>
+        <activity android:name=".activity.DemoActivity">
+
+        </activity>
         <activity
             android:name=".activity.HomeActivity"
            >
