--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
 
     compile 'com.github.f0ris.sweetalert:library:1.5.1'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
