--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     compile 'io.realm:realm-android:0.87.4'
     annotationProcessor 'io.realm:realm-android:0.87.4'
 
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
+
 }
