--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-vector-drawable:27.1.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     compile 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.android.support:multidex:1.0.3'
@@ -59,3 +60,5 @@ dependencies {
     compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
